dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.52)

AC_INIT([a11y-test-suite], [0.1.0])
AC_CONFIG_SRCDIR(HACKING)
AC_COPYRIGHT([Copyright 2006 Novell, Inc.])

AM_INIT_AUTOMAKE
AM_MAINTAINER_MODE

AC_CONFIG_FILES([
Makefile
python/Makefile
scripts/Makefile
])

AC_OUTPUT

