
scriptfiles =			\
	application-browser.py	\
	banshee.py		\
	beagle-search.py	\
	control-center.py	\
	evolution.py		\
	gaim.py			\
	gedit.py		\
	gimp.py			\
	gnome-background-properties.py	\
	gnome-mouse-properties.py	\
	gnome-system-monitor.py	\
	realplay.py		\
	yelp.py			\
	zen-installer.py

cssfiles =			\
	report.css

EXTRA_DIST =			\
	$(scriptfiles)		\
	$(cssfiles)

MAINTAINERCLEANFILES =		\
	Makefile.in
